# Engine3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/Engine/: CMakeLists.txt  camera.cpp  camera.h  cengine_service.cpp  cengine_service.h  input_handler.h  interface.h  main.cpp  platform.cpp  platform.h  player.h  renderer.cpp  renderer.h
src/Engine/shaders/: animatedModel.frag  animatedModel.vert  compile.bat  compile.sh
src/Game/: CMakeLists.txt  exports.def  mygame.cpp
src/dependencies/vkal/: CMakeLists.txt  vkal.c  vkal.h
src/tools/polysoup/: 16x16x16.map  CMakeLists.txt  base1.map  base1_min.map  base1_min2.map  base1_tb.map  e3_test.map  e3_test2.map  e3_test2_min.map  e3_test2_min2.map  e3_test3.map  e3_test3_broken.map  parser.h  polysoup.cpp  polysoup.h  polysoup.py  round_block.map  round_block_rotated.map  valve.map
